# internal/api/router.go
@@ -26,35 +26,43 @@ func NewRouter(h *Handler, staticDir string) http.Handler {
 	}))
 
 	r.Route("/api", func(r chi.Router) {
-		// Interfaces (Device Management)
-		r.Get("/interfaces", h.ListLinks)                   // Runtime Links (Physical & Virtual)
-		r.Get("/interfaces/netdevs", h.ListNetDevs)         // Virtual Device Definitions (.netdev)
-		r.Post("/interfaces", h.CreateNetDev)               // Create Virtual Device
-		r.Get("/interfaces/{filename}", h.GetNetworkConfig) // Reuses generic reader
-		r.Delete("/interfaces/{filename}", h.DeleteNetwork) // Reuses generic delete
+		r.Get("/schemas", h.GetSchemas)        // JSON Schemas
+		r.Get("/view-config", h.GetViewConfig) // UI View Prefs
 
-		// Networks (Configuration Management)
-		r.Get("/networks", h.ListConfigs) // Network Configurations (.network)
+		// NetDevs (.netdev)
+		r.Get("/netdevs", h.ListNetDevs)
+		r.Post("/netdevs", h.CreateNetDev)
+		r.Get("/netdevs/{filename}", h.GetNetworkConfig)
+		r.Delete("/netdevs/{filename}", h.DeleteNetwork)
+
+		// Networks (.network)
+		r.Get("/networks", h.ListNetworks)
 		r.Post("/networks", h.CreateNetwork)
 		r.Get("/networks/{filename}", h.GetNetworkConfig)
 		r.Delete("/networks/{filename}", h.DeleteNetwork)
 
-		// Links (Hardware Configuration)
-		r.Get("/links", h.ListLinkConfigs) // Link Configurations (.link)
+		// Links (.link)
+		r.Get("/links", h.ListLinks)
 		r.Post("/links", h.CreateLink)
 		r.Get("/links/{filename}", h.GetNetworkConfig)
 		r.Delete("/links/{filename}", h.DeleteNetwork)
 
 		// System Management
+		r.Get("/system/status", h.GetSystemStatus)
 		r.Get("/system/config", h.GetGlobalConfig)
 		r.Post("/system/config", h.SaveGlobalConfig)
 		r.Get("/system/view-config", h.GetViewConfig)
 		r.Post("/system/view-config", h.SaveViewConfig)
 		r.Post("/system/reload", h.ReloadNetworkd)
-		r.Get("/system/routes", h.GetRoutes)
+		r.Get("/system/reconfigure", h.ReconfigureSystem)
+		r.Post("/system/reconfigure", h.ReconfigureSystem)
+		r.Get("/system/ssh-key", h.GetPublicSSHKey)
 		r.Get("/system/routes", h.GetRoutes)
 		r.Get("/system/logs", h.GetLogs)
 
+		r.Get("/system/hosts", h.ListHosts)
+		r.Post("/system/hosts", h.AddHost)
+		r.Delete("/system/hosts/{name}", h.RemoveHost)
 	})
 
 	// Serve Static Files (SPA) if staticDir is configured
